experimental client-server